added second line of the story

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
         <p>It was a dark and stormy night.</p>
+        <p>one the wrong side of town, trouble brews</p>
     </body>
 </html>
