--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <body>
         <p>It was a dark and stormy night.</p>
         <p>one the wrong side of town, trouble brews</p>
+        <p>One man stood amongst the crowd with only a beer for defense.</p>
     </body>
 </html>
