this is the fourth line

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <body>
         <p>It was a dark and stormy night.</p>
-        <p>one the wrong side of town, trouble brews</p>
+        <p>on the wrong side of town, trouble brews</p>
         <p>One man stood amongst the crowd with only a beer for defense.</p>
+        <p>He drunkenly charges the crowd and just starts swinging</p>
     </body>
 </html>
