5th line of story

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <p>on the wrong side of town, trouble brews</p>
         <p>One man stood amongst the crowd with only a beer for defense.</p>
         <p>He drunkenly charges the crowd and just starts swinging</p>
+        <p>As his head smashed the wall, he realized the crowd was a wall painting, and that he was very drunk.</p>
     </body>
 </html>
