--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css" />
     <body>
         <p>It was a dark and stormy night.</p>
         <p>on the wrong side of town, trouble brews</p>
         <p>One man stood amongst the crowd with only a beer for defense.</p>
         <p>He drunkenly charges the crowd and just starts swinging</p>
     </body>
+    </head>
 </html>
